--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
 
   <main class="card">
     <div class="avatar-container">
-      <img alt="User avatar" class="avatar" src="https://cdn.discordapp.com/avatars/123456789012345678/a_abcdef1234567890abcdef1234567890.webp?size=512" loading="lazy">
+      <img alt="User avatar" class="avatar" src="https://cdn.discordapp.com/avatars/1186206505658220597/f2f0804d53d3863c8646baca897b7514.webp?size=512" loading="lazy">
       <div class="status" title="Online" aria-label="Online status"></div>
       <div class="status-ripple" aria-hidden="true"></div>
       <div class="avatar-badge avatar-badge-nitro" title="Nitro subscriber" aria-label="Nitro subscriber">
@@ -747,8 +747,8 @@
     </div>
 
     <h1 class="username">
-      <span class="username-text">UltimateUser</span>
-      <span class="discriminator" aria-label="Discriminator">#0001</span>
+      <span class="username-text">DarkPlusX</span>
+      <span class="discriminator" aria-label="Discriminator">#9292</span>
     </h1>
     
     <div class="badges" aria-label="User badges">
